exports[`Greeter says hello 1`] = `
<div>
  Hello 
  <span>
    Marty
  </span>
</div>
`;

exports[`Greetings greets all people 1`] = `
<ul>
  <div>
    Hello 
    <span>
      Jane
    </span>
  </div>
  <div>
    Hello 
    <span>
      Jill
    </span>
  </div>
  <div>
    Hello 
    <span>
      Joey
    </span>
  </div>
</ul>
`;
